--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body {
+    position: relative;
     font-family: 'ChineseFont', sans-serif;
     line-height: 1.6;
     margin: 0;
@@ -23,7 +24,7 @@ h2 {
 }
 
 footer {
-    background: #333;
+    background: #407aac;
     color: #fff;
     text-align: center;
     padding: 1rem 0;
@@ -64,6 +65,7 @@ body {
 
 #home {
     height: 100vh;
+    z-index: 100px;
 }
 
 /* Carousel Styles */
@@ -158,4 +160,39 @@ button.prev {
 
 button.next {
     right: 10px;
+}
+
+#about{
+    padding-top: 300px;
+    z-index: -500;
+    top: -300px;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    background-color: #407aac;
+}
+
+#about .aboutus {
+    position: relative;
+    width: 90%;
+    height: 300px;
+    margin-top: 40px;
+    background-color:#ffffff;
+    border-radius: 20px;
+}
+
+.aboutus h2 {
+    margin: 10px 30px;
+}
+
+.aboutus_background {
+    margin: 0 20px;
+    width: 50%;
+    border-radius: 10px;
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.aboutus_background p {
+    margin: 10px 20px;
 }
