--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     position: relative;
-    font-family: 'ChineseFont', sans-serif;
+    font-family: 'Righteous';
     line-height: 1.6;
     margin: 0;
     padding: 0;
@@ -11,40 +11,143 @@ body {
     margin: 0 auto;
 }
 
-h2 {
-    margin-top: 0;
-}
-
-.team-member {
-    margin-bottom: 1rem;
-}
-
 footer {
-    background: #407aac;
+    background: #3a67b1;
     color: #fff;
     text-align: center;
     padding: 1rem 0;
 }
 
-.language-switch {
-    text-align: right;
-    margin: 1rem 2rem;
+#home {
+    display: flex;               
+    flex-direction: row-reverse;         
+    flex-wrap: wrap;
+    align-items: center;          
+    height: 100vh;
+    position: relative;
+    z-index: 100;
+    background: #C4CFE8;
 }
 
-#home {
-    height: 100vh;
-    z-index: 100px;
+.homecontent {
+    top: -100px;
+    position: relative;
+    width: 30%;                  
+    min-width: 350px;
+    padding: 20px;              
+    box-sizing: border-box;       
+    z-index: 1; 
+    right: 3%;            
 }
+
+@media (max-width :1260px) {
+    #home {
+        height: fit-content;
+    }
+
+    .home {
+        height: fit-content;
+    }
+    .homecontent {
+        top: unset;
+        width: 90%;                   
+        margin-bottom: 50px;
+    }
+    .homecontent h2::before {
+        right: 18%;                
+    }
+}
+
+.homecontent h2 {
+    font-size: 50px;
+    color: #fff;
+    position: relative;
+    z-index: -200;                 
+    padding: 20px;
+    margin: 0;
+    background-color: #6f91c9;   
+    display: inline-block;       
+    border-radius: 20px;
+}
+
+.homecontent h2::before {
+    
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -19%;                
+    width: 93vw;               
+    height: 100%;
+    background-color: #6f91c9;   
+    z-index: -100;                 
+    border-radius: 20px;
+}
+
+.homecontent p {
+    font-size: 20px;
+    color: #fff;
+}
+
+#home .background {
+    background-color: #3a67b1;
+    z-index: -900;
+    height: 700px;
+    width: 90%;
+    right: 50%;
+    transform: translateX(50%);
+    position: absolute;
+    top: 1px;
+    border-radius: 0px 0px 100px 100px;
+    top: -100px;
+}
+
+@media (max-width :1260px) {
+    #home .background {
+        height: 750px;
+    }
+    
+}
+
+@media (max-width :825px) {
+    #home .background {
+        height: 850px;
+    }
+    
+}
+
+@media (max-width :620px) {
+    #home .background {
+        height: 870px;
+    }
+    
+}
+
 
 /* Carousel Styles */
 .carousel {
-    width: 100%;
-    height: 80%;
+    width: 60%;                   /* Carousel width */
+    min-width: 750px;
+    height: fit-content;
     position: relative;
-    overflow:hidden;
+    overflow: hidden;
     border: none;
     border-radius: 10px;
-    margin: auto;
+    margin: auto 0;
+    z-index: 100;
+}
+
+@media (max-width :1260px) {
+    .carousel {
+        right: 50%;
+        transform: translateX(50%);
+    }
+}
+
+@media (max-width :800px) {
+    .carousel {
+        right: 50%;
+        transform: translateX(50%) scale(0.7);
+    }
 }
 
 .carousel-inner {
@@ -130,200 +233,330 @@ button.next {
     right: 10px;
 }
 
-.about1{
-    padding-top: 300px;
-    z-index: -500;
-    top: -300px;
-    display: flex;
+.our_company_summary {
     position: relative;
+    text-align: center;
     justify-content: center;
-    background-color: #407aac;
+    background: linear-gradient(180deg, #C4CFE8 0%, #FFFFFF 100%);
 }
 
-#about .aboutus {
-    position: relative;
-    width: 90%;
-    /* height: fit-content; */
-    margin-top: 40px;
-    background-color:#ffffff;
-    border-radius: 20px;
-    margin-bottom: 50px;
+.our_company_summary h2 {
+    margin: unset;
+    font-size: 50px;
 }
 
-.aboutus h2 {
-    margin: 10px 30px;
-    margin-top: 40px;
+.green {
+    color: #41C757;
 }
 
-.aboutus_background1 {
+.our_company_summary p {
+    display: inline-flex;
+    justify-content: center;
+    width: 70%;
+}
+
+.our_company_summary hr {
+    left: calc(50% - 932px/2);
+    border: 3px solid #1B48B2;
+}
+
+.custom-hr {
+    display: inline-flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    width: 70%;
+}
+
+.custom-hr::before,
+.custom-hr::after {
+    content: "";
+    flex: 1;
+    border: 1.5px solid #1B48B2;
+}
+
+.custom-hr::before {
+    margin-right: 10px; 
+}
+
+.custom-hr::after {
+    margin-left: 10px;
+}
+
+.custom-hr a {
+    text-decoration: none;
+    color:unset;
+}
+
+.data_container {
+    justify-content: center;
     position: relative;
     display: flex;
+    flex-wrap: wrap;
+}
+
+.data_container .data {
+    text-align: center;
+    width: 20%;
+
+}
+.data .green {
+    display: contents;
+}
+
+.img-container {
+    position: relative;
+    display: inline-block;
+}
+
+.img-container::before {
+    content: '';
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    width: 80%;
+    height: 50%;
+    background: #83E393;
+    border-radius: 20px;
+    z-index: 0; 
+}
+
+.our_company_summary img {
+    width: 70%;
+    height: auto;
+    position: relative;
+    z-index: 1; 
+    display: inline-flex;
 }
 
 
-.aboutus_background {
-    margin: 20px 20px;
-    padding: 10px 10px;
-    width: 55%;
+.our_product_and_services_summary {
+    text-align: center;
+    justify-content: center;    
+}
+
+.p_s_summary_content {
+    position: relative;
+    z-index: 3;
+    display: inline-block;
+    background-color: rgb(255, 255, 255);
     height: fit-content;
-    border-radius: 10px;
-    position: relative;
-    background-color: rgba(174, 174, 174, 0.5);
+    border-radius: 20px;
+    width: 60%;
+    text-align: center;
+    justify-content: center;
+    margin-top: 20px;
 }
 
-.aboutus_background p {
-    margin: 10px 20px;
+.p_s_summary_content h2 {
+    font-size: 50px;
+    margin: unset;
 }
 
-.aboutus_background1 img {
-    position: relative;
-    width: 30%;
-    height: 300px;
+.p_s_summary_content p {
+    display: inline-flex;
+    width: 50%;
     margin: 20px 20px;
 }
 
-.vision_mission {
+.p_s_big_container {
+    position: relative;
+    z-index: 1; 
+    padding-top: 50px;
+    padding-bottom: 80px;
+    width: 70%;
+    background: transparent;
+    border-radius: 55px;
+    display: inline-block;
+    justify-content: center;
+}
+
+
+.p_s_big_container::before {
+    content: '';
+    position: absolute;
+    top: -50px; 
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #83E393; 
+    border-radius: 55px;
+    z-index: -3; 
+}
+
+.p_s_container {
+    position: relative;
+    width: 100%;
+    height: auto; 
+    background-color: transparent; 
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+}
+
+
+.p_s_container::before {
+    content: '';
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    width: 70%; 
+    height: 40%; 
+    background-color: #fff; 
+    border-radius: 25px; 
+    z-index: 0; 
+    top: 70%;
+}
+
+.p_s {
+    width: 20%; 
+    margin: 10px;
+    z-index: 1; 
+    position: relative;
+}
+
+.p_s h2 {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    font-size: 15px;
+    text-align: center;
+    background: white;
+    border-radius: 20px;
+    width: fit-content;
+    padding: 5px 10px;
+    margin: unset;
+    top: 10px;
+}
+
+.p_s img {
+    width: 90%;
+    height: auto;
+}
+
+.career_summary {
     display: flex;
     flex-wrap: wrap;
     position: relative;
+    background: linear-gradient(90deg, #50C063 69.48%, #FFFFFF 69.48%, #FFFFFF 73.42%, #4FC162 73.47%, #41C757 77.3%, #FFFFFF 77.35%, #FFFFFF 81.49%, #41C757 81.5%, #5DBA6D 85.45%, #FFFFFF 85.45%, #FFFFFF 89.49%, #41C757 89.5%);;
+}
+
+.career_summary_content {
+    position: relative;
+    text-align: center;
     justify-content: center;
-}
-
-.vision {
-    width: 40%;
-    margin-left: 5%;
-    min-width: 380px;
-}
-
-.vision h2 {
-    text-align: center;
     width: 50%;
-    background-color: #f8f8f8;
-    margin: 0;
-    border-bottom: #333 solid 3px;
+    height: fit-content;
+    background: #D5FDBE;
+    top: -25px;
+    padding-bottom: 20px;
 }
 
-.vision p {
-    font-size: 30px;
-    display: flex;
-    text-align: center;
-    width: 85%;
-    height: 150px;
-    border-radius: 5px;
-    background-color: #f8f8f8;
-    border-bottom: #333 solid 3px;
-    border-left: #333 solid 3px;
-    margin: 0;
-    padding: 20px 20px;
+.career_summary_content h2 {
+    color: white;
+    font-size: 50px;
+    width: fit-content;
+    padding: 0px 20px 0px 70px;
+    background: linear-gradient(90deg, #FFFFFF 21%, #1D5727 21.01%);
 }
 
-.straight_line {
-    height: 300px;
-    width: 8px;
-    background-color: #f8f8f8;
-    border-bottom: #9f9f9f solid 3px;
-}
-
-.mission {
-    width: 40%;
-    margin-left: 5%;
-    min-width: 380px;
-}
-.mission h2 {
-    text-align: center;
-    width: 50%;
-    background-color: #f8f8f8;
-    margin: 0;
-    border-bottom: #333 solid 3px;
-}
-
-.mission p {
-    font-size: 30px;
-    display: flex;
-    text-align: center;
-    width: 85%;
-    height: 150px;
-    border-radius: 5px;
-    background-color: #f8f8f8;
-    border-bottom: #333 solid 3px;
-    border-left: #333 solid 3px;
-    margin: 0;
-    padding: 20px 20px;
-}
-
-.about2 hr {
-    background-color: #f8f8f8;
-    width: 60%;
-    height: 8px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border: none;
-    border-bottom: #9f9f9f solid 3px;
-}
-
-.value {
-    width: 80%;
-    margin-left: 10%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.value h2 {
-    text-align: center;
-    width: 50%;
-    background-color: #f8f8f8;
-    margin: 0;
-    border-bottom: #333 solid 3px;
-}
-
-.value ul {
-    font-size: 30px;
-    justify-content: content;
+.career_summary_content p {
+    margin: 10px 10%;
+    line-height: 65px;
     text-align: justify;
-    width: 96%;
-    height: 150px;
-    border-radius: 5px;
-    background-color: #f8f8f8;
-    border-bottom: #333 solid 3px;
-    border-left: #333 solid 3px;
-    margin: 0;
-    padding: 20px 40px;
 }
 
-.card_container {
-    justify-content: center;
+.career_summary img {
+    width: 50%;
+    margin: 2% 0%;
+    height: fit-content;
+}
+
+.facebook_comment {
+    display: flex;
+    margin-top: 50px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    background: linear-gradient(180deg, #B0C8FF 0%, #FFFFFF 100%);
+    border-radius: 55px;
+    width: 80%;
+    height: 500px;
+}
+
+.facebook_comment img {
+    top: 60px;
+    left: 60px;
+    position: absolute;
+    width: 350px;
+    margin: 2.5% 2.5%;
+    height: fit-content;
+}
+
+.comment_content {
     position: relative;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 50%;
+    left: 35%;
 }
 
-.card {
-    margin: 20px 20px;
+.comment_content h2 {
+    font-size: 50px;
+    width: 100%;
+    text-align: right;
+}
+
+.iframe-slider {
+    position: relative;
     display: flex;
-    width: 70%;
+    align-items: center;
+    justify-content: center;
+    width: 165%;
+}
+
+.iframe-container {
+    overflow: hidden;
+    width: 95%; /* Display space for two iframes */
+}
+
+.iframe-wrapper {
+    display: flex;
+    transition: transform 0.5s ease;
+}
+
+iframe {
+    margin: 0 10px; /* Add some spacing between iframes */
+}
+
+.arrow {
+    display: flex;
+    justify-content: center;
+    width: fit-content;
     height: fit-content;
-    background-color: #fff;
-    border-top: #333 solid 2px;
-    border-bottom: #333 solid 2px;
+}
+.arrow .prev, .arrow .next {
+    background-color: rgba(0, 0, 0, 0.5);
+    height: fit-content;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    margin: 10px 15px;
 }
 
-.card img {
-    width: 150px;
-    height: 150px;
+/* .iframe-slider .prev {
+    left: 0;
 }
 
-.card_info .small {
-    font-size: 15px;
-}
-
-.card_info {
-    width: 70%;
-}
-
-.card_info h2 {
-    width: 100%;
-}
-
-.card_info p {
-    width: 100%;
-}
-
+.iframe-slider .next {
+    right: 0;
+} */
