--- a/service.css
+++ b/service.css
@@ -1,101 +1,7 @@
 body {
     position: relative;
-    font-family: 'ChineseFont', sans-serif;
+    font-family: 'Righteous';
     line-height: 1.6;
     margin: 0;
     padding: 0;
-}
-
-.section {
-    padding: 5px;
-}
-
-.container {
-    width: 80%;
-    margin: 0 auto;
-}
-
-.language-switch {
-    text-align: right;
-    margin: 1rem 2rem;
-}
-
-.bgbox{
-    background: linear-gradient(180deg, #39A985 0%, #39A985 250px, #FFF 50px, #FFF 100%); 
-    height: fit-content; 
-    border: 1px solid #000;
-    width: 80%;
-    margin: 0 auto;
-}
-
-.block{
-    text-align: center;
-}
-
-.block h2{
-    font-size: 30px;
-    color: #ffffff;
-    margin: 20px 0px 10px 0px;
-}
-
-.block p{
-    font-size: 20px;
-    color: #ffffff;
-    margin: 0;
-}
-
-.service-container{
-    width: 90%;
-    margin: 0 auto;
-
-}
-
-.box{
-    background-color: rgb(255, 255, 255); 
-    width: 100%; 
-    height: 300px;
-    /* margin: auto; */
-    margin-bottom: 50px;
-    box-shadow: 0px 8px 20px 0px #000;
-}
-
-footer {
-    background: #407aac;
-    color: #fff;
-    text-align: center;
-    padding: 1rem 0;
-}
-
-.wave-container {
-    position: relative;
-    width: 100%;
-    height: 200px;
-    overflow: hidden;
-    background: #4ABD98;
-}
-
-.wave {
-    position: absolute;
-    width: 200%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 100" preserveAspectRatio="none"><path d="M0,50 Q150,100 300,50 T600,50 T900,50 T1200,50 L1200,0 L0,0 Z" fill="%23fff"/></svg>');
-    background-size: 50% 100%;
-    animation: wave-animation 15s linear infinite;
-}
-
-.wave:nth-child(2) {
-    top: 0;
-    opacity: 0.5;
-    animation: wave-animation 15s linear infinite reverse;
-}
-
-@keyframes wave-animation {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-50%);
-    }
 }
