--- a/header.css
+++ b/header.css
@@ -13,7 +13,10 @@ header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 80%;
+    margin: 0 auto;
 }
+
 
 header h1 {
     margin: 0;
@@ -79,4 +82,16 @@ header nav a.active {
     color: #000 !important; /* 强制应用黑色文字 */
     border-radius: 3px;
     width: 100%;
+}
+
+footer .container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+footer {
+    background: #407aac;
+    color: #fff;
+    text-align: center;
+    padding: 1rem 0;
 }
