--- a/v_m_v.css
+++ b/v_m_v.css
@@ -18,6 +18,50 @@ footer {
     padding: 1rem 0;
 }
 
+.v_m_v_title {
+    position: relative;
+}
+
+.v_m_v_title img {
+    width: 100%;
+    z-index: -3;
+    position: absolute;
+}
+
+.v_m_v_title::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(151, 202, 222, 0.6); 
+    z-index: -2;
+}
+
+
+.v_m_v_title h2 {
+    display: inline-flex;
+    justify-content: center;
+    width: fit-content;
+    position: relative;
+    background-color: transparent;
+    height: fit-content;
+    z-index: 0;
+}
+
+.v_m_v_title h2::before {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 25%;
+    background-color: #1B48B2; 
+    transform: translateY(-50%); 
+}
+
 .vision_mission_value {
     display: flex;
     flex-wrap: wrap;
