--- a/our_company.css
+++ b/our_company.css
@@ -29,6 +29,7 @@ body {
 
 
 .our_company_title h2 {
+    color: linear-gradient(180deg, #1B48B2 0%, #0B1F4C 100%);
     display: inline-flex;
     justify-content: center;
     width: fit-content;
@@ -36,6 +37,7 @@ body {
     background-color: transparent;
     height: fit-content;
     z-index: 0;
+    margin-left: 20%;
 }
 
 .our_company_title h2::before {
@@ -46,8 +48,15 @@ body {
     left: 0;
     width: 100%;
     height: 25%;
-    background-color: #1B48B2; 
+    background-color: rgba(85, 255, 0, 0.35); 
     transform: translateY(-50%); 
+}
+
+.our_company_title p {
+    color: linear-gradient(180deg, #1B48B2 0%, #0B1F4C 100%);
+    width: 85%;
+    text-align: right;
+    background: rgba(85, 255, 0, 0.35);
 }
 
 .blue_background{
