--- a/career.css
+++ b/career.css
@@ -5,3 +5,82 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.green {
+    color: #41C757;
+}
+
+.admin_sales, .telemarketing, .internship {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.admin_sales_content, .telemarketing_content, .internship_content {
+    margin: 2% 5%;
+    width: 50%;
+}
+
+.admin_sales_content h2, .telemarketing_content h2, .internship_content h2 {
+    font-size: 50px;
+}
+
+.admin_sales img, .telemarketing img, .internship img {
+    margin: 50px 2.5%;
+    width: 35%;
+    height: fit-content;
+}
+
+.sales_partner, .customer_services {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    background: #e2fdf58f;
+}
+
+.sales_partner_content, .customer_services_content {
+    margin: 2% 5%;
+    width: 50%;
+}
+
+.sales_partner_content h2, .customer_services_content h2 {
+    font-size: 50px;
+}
+
+.sales_partner img, .customer_services img {
+    margin: 50px 2.5%;
+    width: 35%;
+    height: fit-content;
+}
+
+.requirement_benefit {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.requirement {
+    color: white;
+    width: 50%;
+    background: linear-gradient(90deg, #40917A 2.75%, #40917A 84.92%, #FFFFFF 85.07%, #FFFFFF 91.94%, #40917A 91.95%);
+}
+
+.benefit {
+    width: 50%;
+    background: linear-gradient(0deg, #EEFEF9 2.75%, #EEFEF9 89.92%, #40917A 90.07%);
+}
+
+.requirement h2, .benefit h2 {
+    font-size: 50px;
+    margin: 5% 10%;
+}
+
+.requirement ul, .benefit ul {
+    margin: 5% 10%;
+}
+
+.green_rec {
+    width: 100%;
+    height: 40px;
+    background: linear-gradient(90deg, #FFFFFF 2.85%, #5DBA6D 2.87%, #5DBA6D 6.01%, #FFFFFF 6.05%, #FFFFFF 9.15%, #5DBA6D 9.20%, #5DBA6D 12.10%, #FFFFFF 12.15%, #FFFFFF 15.33%, #5DBA6D 15.37%, #5DBA6D 75.76%, #EEFEF9 75.79%);
+}
