--- a/our_company.css
+++ b/our_company.css
@@ -6,31 +6,19 @@ body {
     padding: 0;
 }
 
+.green {
+    color: #41C757;
+}
+
 .our_company_title {
+    background-size: 100%;
+    background-image: url(pictures/about_us_bg.png);
     position: relative;
-    height: 200px;
+    height: 250px;
 }
-
-.our_company_title img {
-    width: 100%;
-    z-index: -3;
-    position: absolute;
-}
-
-.our_company_title::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(151, 202, 222, 0.6); 
-    z-index: -2;
-}
-
 
 .our_company_title h2 {
-    color: linear-gradient(180deg, #1B48B2 0%, #0B1F4C 100%);
+    color: #1B48B2 ;
     display: inline-flex;
     justify-content: center;
     width: fit-content;
@@ -39,6 +27,8 @@ body {
     height: fit-content;
     z-index: 0;
     margin-left: 20%;
+    font-size: 50px;
+    margin-bottom: unset;
 }
 
 .our_company_title h2::before {
@@ -54,10 +44,13 @@ body {
 }
 
 .our_company_title p {
-    color: linear-gradient(180deg, #1B48B2 0%, #0B1F4C 100%);
-    width: 85%;
+    color: #1B48B2 ;
+    width: 60%;
     text-align: right;
-    background: rgba(85, 255, 0, 0.35);
+    background-color: rgba(85, 255, 0, 0.35);
+    font-size: 25px;
+    margin-top: unset;
+    margin-left: 20%;
 }
 
 .blue_background{
@@ -69,8 +62,10 @@ body {
 
 .blue_background .ourcompany {
     position: relative;
+    margin-top: 80px;
     width: 95%;
     height: fit-content;
+    border-radius: 40px 40px 0 0;
     background: linear-gradient(180deg, #C4CFE8 0%, #FFFFFF 100%);
 }
 
@@ -85,6 +80,7 @@ body {
     position: relative;
     display: flex;
     flex-wrap: wrap;
+    width: 90%;
 }
 
 
@@ -95,12 +91,13 @@ body {
     height: fit-content;
     border-radius: 10px;
     position: relative;
-    background-color: rgba(174, 174, 174, 0.5);
+    /* background-color: rgba(174, 174, 174, 0.5); */
 }
 
 .ourcompany_background p {
     margin: 10px 20px;
     font-size: 25px;
+    text-align: justify;
 }
 
 .ourcompany_background1 img {
@@ -108,11 +105,12 @@ body {
     width: 30%;
     min-width: 300px;
     height: fit-content;
-    margin: 20px 20px;
+    margin: 5% 5%;
     top: -50px;
 }
 
 .ourcompany_content {
+    margin-top: 50px;
     justify-content: center;
     width: 100%;
     position: relative;
@@ -123,11 +121,12 @@ body {
 .whyus, .commitment{
     margin: 10px 10px;
     position: relative;
-    width: 45%;
+    width: 35%;
     justify-content: center;
     text-align: center;
     background-color: #fff;
     border-radius: 20px;
+    box-shadow: 4px 10px 30px rgba(0, 0, 0, 0.06);
 }
 .whyus h2, .commitment h2 {
     color: #4361EE;
