--- a/service.css
+++ b/service.css
@@ -107,6 +107,7 @@ a {
     display: flex;
     justify-content: space-between;
     padding: 50px 100px;
+    padding-bottom: 0px;
 }
 
 .left-section {
