--- a/header.css
+++ b/header.css
@@ -38,26 +38,27 @@ header nav li {
 header nav a {
     color: #fff;
     text-decoration: none;
-    padding: 0 10px;
+    padding: 7px 10px 7px 10px;
+    z-index: 2;
 }
 
 header .dropdown {
     width: 250%;
     display: none;
     position: absolute;
-    top: 100%;
+    top: 115%;
     left: 0;
     background-color: #ffffff;
-    padding: 0.5rem;
-    border: 1px solid #fff;
+    border-radius: 15px;
+    z-index: 0;
 }
 
-header nav .dropdown a{
+header nav .dropdown a li{
     color: #000;
-}
-
-header .dropdown li {
-    margin: 0.5rem 0;
+    margin: unset;
+    padding: unset;
+    padding: 5px 0px 5px 15px;
+    /* line-height: -10 !important; */
 }
 
 header nav li:hover > .dropdown {
@@ -67,13 +68,15 @@ header nav li:hover > .dropdown {
 
 header nav ul li::after {
     content: "";
-    height: 2px;
+    height: 133%;
     width: 0;
-    background: black;
+    background: rgba(202, 202, 202, 0.555);
     position: absolute;
     left: 0;
     bottom: -5px;
-    transition: width 0.5s ease-in-out;
+    border-radius: 3px;
+    /* transition: width 0.5s ease-in-out; */
+    z-index: -2;
 }
 
 header nav ul li:hover::after {
