--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@ body {
     margin: 0;
     padding: 0;
 }
+p, a {
+    font-size: 18px;
+}
 
 #home {
     display: flex;               
@@ -241,6 +244,7 @@ button.next {
     display: inline-flex;
     justify-content: center;
     width: 70%;
+    font-size: 18px;
 }
 
 .our_company_summary hr {
@@ -455,7 +459,7 @@ button.next {
 
 .career_summary_content p {
     margin: 10px 10%;
-    line-height: 65px;
+    line-height: 50px;
     text-align: justify;
 }
 
