--- a/our_company.css
+++ b/our_company.css
@@ -10,6 +10,9 @@ body {
     color: #41C757;
 }
 
+p, a {
+    font-size: 18px;
+}
 .our_company_title {
     background-size: 100%;
     background-image: url(pictures/about_us_bg.png);
@@ -96,7 +99,7 @@ body {
 
 .ourcompany_background p {
     margin: 10px 20px;
-    font-size: 25px;
+    font-size: 20px;
     text-align: justify;
 }
 
@@ -130,4 +133,9 @@ body {
 }
 .whyus h2, .commitment h2 {
     color: #4361EE;
+}
+
+.whyus p, .commitment p {
+    margin: 3% 5%;
+    text-align: justify;
 }
