--- a/v_m_v.css
+++ b/v_m_v.css
@@ -112,7 +112,8 @@ body {
 }
 
 .vision_background h2, .value_background h2 {
-    margin: 0;
+    margin: 0
+    ;
     font-size: 50px;
     text-align: center;
     background: linear-gradient(180deg, #9AD7C8 53.26%, #00A077 53.27%);
@@ -137,10 +138,12 @@ body {
     text-align: justify;
     color: #FFFFFF;
     margin: 20px 20px;
+    margin-bottom: 10%;
 }
 
 .value_background ul {
     color: #FFFFFF;
     font-size: 20px;
     margin-right: 20px;
+    margin-bottom: 10%;
 }
