--- a/contact_us.css
+++ b/contact_us.css
@@ -9,6 +9,23 @@ body {
 p {
     font-size: 18px;
 }
+
+.scroll-hidden {
+    opacity: 0;
+    transform: translateX(100px); 
+    transition: all 2s ease-out;
+}
+
+.scroll-hidden1 {
+    opacity: 0;
+    transform: translateX(-200px); 
+    transition: all 2s ease-out;
+}
+
+.scroll-visible {
+    opacity: 1;
+    transform: translateX(0); 
+}
 .green {
     color: #41C757;
 }
