--- a/index.css
+++ b/index.css
@@ -9,6 +9,23 @@ p, a {
     font-size: 18px;
 }
 
+.scroll-hidden {
+    opacity: 0;
+    transform: translateX(100px); 
+    transition: all 2s ease-out;
+}
+
+.scroll-hidden1 {
+    opacity: 0;
+    transform: translateX(-100px); 
+    transition: all 2s ease-out;
+}
+
+.scroll-visible {
+    opacity: 1;
+    transform: translateX(0); 
+}
+
 #home {
     display: flex;               
     flex-direction: row-reverse;         
