--- a/v_m_v.css
+++ b/v_m_v.css
@@ -6,6 +6,31 @@ body {
     padding: 0;
 }
 
+.scroll-hidden {
+    opacity: 0;
+    transform: translateX(100px); 
+    transition: all 2s ease-out;
+}
+
+.scroll-hidden1 {
+    opacity: 0;
+    transform: translateX(-100px); 
+    transition: all 2s ease-out;
+}
+
+.scroll-hidden2 {
+    opacity: 0;
+    transform: translateY(100px); 
+    transition: all 2s ease-out;
+}
+
+.scroll-visible {
+    opacity: 1;
+    transform: translateX(0); 
+}
+
+
+
 .green {
     color: #41C757;
 }
