--- a/card.css
+++ b/card.css
@@ -34,3 +34,26 @@
 .card_info p {
     width: 100%;
 }
+
+
+/* strategic partner */
+
+.strategic-tittle {
+    justify-content: center;
+    position: relative;
+    display: flex;
+}
+
+.strategic-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0;
+    gap: 3rem;
+}
+
+.strategic-logo img {
+    width: 180px;
+    height: auto;
+}
