--- a/contact_us.css
+++ b/contact_us.css
@@ -18,13 +18,19 @@ p {
 
 .scroll-hidden1 {
     opacity: 0;
-    transform: translateX(-200px); 
+    transform: scale(0.5); 
+    transition: all 2s ease-out;
+}
+
+.scroll-hidden2 {
+    opacity: 0;
+    transform: rotate(30deg); 
     transition: all 2s ease-out;
 }
 
 .scroll-visible {
     opacity: 1;
-    transform: translateX(0); 
+    transform: translateX(0) rotate(0deg) scale(1); 
 }
 .green {
     color: #41C757;
