--- a/index.css
+++ b/index.css
@@ -11,19 +11,19 @@ p, a {
 
 .scroll-hidden {
     opacity: 0;
-    transform: translateX(100px); 
+    transform: translateX(100px) scale(1.1); 
     transition: all 2s ease-out;
 }
 
 .scroll-hidden1 {
     opacity: 0;
-    transform: translateX(-100px); 
+    transform: translateX(-100px) scale(1.1); 
     transition: all 2s ease-out;
 }
 
 .scroll-visible {
     opacity: 1;
-    transform: translateX(0); 
+    transform: translateX(0) scale(1); 
 }
 
 #home {
