--- a/our_company.css
+++ b/our_company.css
@@ -14,13 +14,13 @@ body {
 
 .scroll-hidden1 {
     opacity: 0;
-    transform: translateX(-200px); 
+    transform: scale(0.5); 
     transition: all 2s ease-out;
 }
 
 .scroll-visible {
     opacity: 1;
-    transform: translateX(0); 
+    transform: translateX(0) scale(1); 
 }
 
 .green {
