--- a/header.css
+++ b/header.css
@@ -17,7 +17,19 @@ header .container {
     margin: 0 auto;
 }
 
+header .jv {
+    width: fit-content;
+    display: flex;
+    flex-wrap: nowrap;
+}
 
+header img {
+    width: 65px;
+    height: fit-content;
+    background-color: white;
+    border-radius: 10px;
+    margin: 0 10px;
+}
 
 header h1 {
     margin: 0;
@@ -182,4 +194,9 @@ footer {
     color: #fff;
     text-align: center;
     padding: 1rem 0;
+}
+
+
+@media (max-width: 490px) {
+    
 }
